--- a/public/views/index.html
+++ b/public/views/index.html
@@ -22,7 +22,6 @@
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16">Mail</div>
     <div class="w3-center w3-padding-16">My Food</div>
   </div>
 </div>
@@ -82,12 +81,12 @@
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+      <a href="#previousPage" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="#page1" class="w3-bar-item w3-black w3-button">1</a>
+      <a href="#page2" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="#page3" class="w3-bar-item w3-button w3-hover-black">3</a>
+      <a href="#page4" class="w3-bar-item w3-button w3-hover-black">4</a>
+      <a href="#nextPage" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
 
