--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <link rel="icon" type="image/png" href="cookbook.png">
 <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
@@ -82,7 +83,7 @@
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#previousPage" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a onClick="previousPage()" class="w3-bar-item w3-button w3-hover-black">«</a>
       <a href="#page1" class="w3-bar-item w3-black w3-button">1</a>
       <a href="#page2" class="w3-bar-item w3-button w3-hover-black">2</a>
       <a href="#page3" class="w3-bar-item w3-button w3-hover-black">3</a>
@@ -98,12 +99,17 @@
 <script>
     // Script to open and close sidebar
     function w3_open() {
-      document.getElementById("mySidebar").style.display = "block";
+      $("#mySidebar").style.display = "block";
     }
 
     function w3_close() {
-      document.getElementById("mySidebar").style.display = "none";
+      $("#mySidebar").style.display = "none";
     }
+
+    function previousPage(){
+      console.log("Go Previous");
+    }
+
 </script>
 
 </body>
